Fixed tooltip clipping in problem

--- a/src/components/problems/ProblemEditor.module.scss
+++ b/src/components/problems/ProblemEditor.module.scss
@@ -178,15 +178,14 @@
 }
 
 .code-actions-backdrop {
-  position: absolute;
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+  width: calc(50vw - 0.5rem);
+  height: 4rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  height: 100%;
   z-index: 25;
   backdrop-filter: blur(2px);
   font-size: 1.5rem;
