--- a/src/components/reusables/codeEditor/EditorActionBar.module.scss
+++ b/src/components/reusables/codeEditor/EditorActionBar.module.scss
@@ -12,8 +12,6 @@
   gap: 1rem;
   z-index: 5;
   position: sticky;
-  overflow-x: hidden;
-  overflow-y: hidden;
 
   &--dark {
     background-color: $dark-background-300;
